# txmatching/web/api/configuration_api.py
@@ -6,6 +6,7 @@ import logging
 from flask import jsonify
 from flask_restx import Resource
 
+from txmatching.auth.auth_check import require_valid_txm_event_id
 from txmatching.auth.user.user_auth_check import require_user_login
 from txmatching.data_transfer_objects.configuration.configuration_swagger import \
     ConfigurationJson
@@ -32,6 +33,7 @@ class ConfigurationApi(Resource):
                                 )
     @configuration_api.response(code=500, model=FailJson, description='Unexpected error, see contents for details.')
     @require_user_login()
-    def get(self) -> str:
-        txm_event = get_txm_event(get_txm_event_id_for_current_user())
+    @require_valid_txm_event_id()
+    def get(self, txm_event_id: int) -> str:
+        txm_event = get_txm_event(txm_event_id)
         return jsonify(get_configuration_for_txm_event(txm_event))
