# txmatching/web/api/patient_api.py
@@ -7,6 +7,7 @@ from dacite import from_dict
 from flask import jsonify, request
 from flask_restx import Resource
 
+from txmatching.auth.auth_check import require_valid_txm_event_id
 from txmatching.auth.exceptions import InvalidArgumentException
 from txmatching.auth.operation_guards.country_guard import (
     get_user_default_country, guard_user_country_access_to_donor,
@@ -52,8 +53,9 @@ class AllPatients(Resource):
                           )
     @patient_api.response(code=500, model=FailJson, description='Unexpected error, see contents for details.')
     @require_user_login()
-    def get(self) -> str:
-        txm_event = get_txm_event(get_txm_event_id_for_current_user())
+    @require_valid_txm_event_id()
+    def get(self, txm_event_id: int) -> str:
+        txm_event = get_txm_event(txm_event_id)
         return jsonify(to_lists_for_fe(txm_event))
 
 
@@ -69,10 +71,11 @@ class AlterRecipient(Resource):
                           )
     @patient_api.response(code=500, model=FailJson, description='Unexpected error, see contents for details.')
     @require_user_edit_access()
-    def put(self):
+    @require_valid_txm_event_id()
+    def put(self, txm_event_id: int):
         recipient_update_dto = from_dict(data_class=RecipientUpdateDTO, data=request.json)
         guard_user_country_access_to_recipient(user_id=get_current_user_id(), recipient_id=recipient_update_dto.db_id)
-        return jsonify(update_recipient(recipient_update_dto, get_txm_event_id_for_current_user()))
+        return jsonify(update_recipient(recipient_update_dto, txm_event_id))
 
 
 @patient_api.route('/donor', methods=['PUT'])
@@ -86,14 +89,14 @@ class AlterDonor(Resource):
                           )
     @patient_api.response(code=500, model=FailJson, description='Unexpected error, see contents for details.')
     @require_user_edit_access()
-    def put(self):
+    @require_valid_txm_event_id()
+    def put(self, txm_event_id: int):
         donor_update_dto = from_dict(data_class=DonorUpdateDTO, data=request.json)
         guard_user_country_access_to_donor(user_id=get_current_user_id(), donor_id=donor_update_dto.db_id)
-        txm_event_db_id = get_txm_event_id_for_current_user()
-        txm_event = get_txm_event(txm_event_db_id)
+        txm_event = get_txm_event(txm_event_id)
         all_recipients = txm_event.all_recipients
         return jsonify(donor_to_donor_dto_out(
-            update_donor(donor_update_dto, get_txm_event_id_for_current_user()),
+            update_donor(donor_update_dto, txm_event_id),
             all_recipients,
             txm_event)
         )
@@ -120,13 +123,13 @@ class AddPatientsFile(Resource):
                           )
     @patient_api.response(code=500, model=FailJson, description='Unexpected error, see contents for details.')
     @require_user_edit_access()
-    def put(self):
+    @require_valid_txm_event_id()
+    def put(self, txm_event_id: int):
         file = request.files['file']
         file_bytes = file.read()
-        txm_event_db_id = get_txm_event_id_for_current_user()
-        txm_event_name = get_txm_event(txm_event_db_id).name
+        txm_event_name = get_txm_event(txm_event_id).name
         user_id = get_current_user_id()
-        save_uploaded_file(file_bytes, file.filename, txm_event_db_id, user_id)
+        save_uploaded_file(file_bytes, file.filename, txm_event_id, user_id)
 
         if file.filename.endswith('multi_country.xlsx'):
             parsed_data = parse_excel_data(file_bytes, txm_event_name, None)
